# what.test

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  manage_backend.py  manage_prodselect.py  pyproject.toml  requirements.in
app/: application.py  manage_backend.py  manage_prodselect.py
app/backend/: asgi.py  settings.py  urls.py  wsgi.py
app/backend/apps/api/: __init__.py  apps.py  serializers.py  urls.py  views.py
app/backend/apps/crazy_registration/: __init__.py  apps.py  urls.py  views.py
app/backend/apps/products/: __init__.py  admin.py  apps.py
app/backend/apps/products/management/commands/: generate_products.py
app/backend/apps/products/migrations/: 0001_initial.py
app/backend/apps/selection/: __init__.py  admin.py  apps.py  models.py
app/backend/apps/selection/migrations/: 0001_initial.py  0002_initial.py
app/backend/apps/users/: __init__.py  admin.py  models.py
app/backend/apps/users/migrations/: 0001_initial.py
app/prodselect/: asgi.py  settings.py  urls.py  wsgi.py
app/prodselect/apps/api/: __init__.py  apps.py  routers.py  serializers.py  urls.py  views.py
app/prodselect/apps/crazy_registration/: __init__.py  apps.py  forms.py  urls.py  views.py
app/prodselect/apps/products/: __init__.py  admin.py  apps.py  models.py
app/prodselect/apps/products/management/commands/: generate_products.py
app/prodselect/apps/products/migrations/: 0001_initial.py
app/prodselect/apps/selection/: __init__.py  admin.py  apps.py  models.py
app/prodselect/apps/selection/migrations/: 0001_initial.py  0002_alter_selection_unique_together.py
app/prodselect/apps/users/: __init__.py  admin.py  apps.py  models.py
app/prodselect/apps/users/migrations/: 0001_initial.py  0002_alter_user_email_alter_user_username.py
app/shared/typing/: required.py
app/ui/: app.py  app_layout.py  callbacks.py  clientside_sugar.py  layout.py  settings.py
app/ui/assets/: app.css  auth.js  dashAgGridComponentFunctions.js  pagesCache.js  productSelection.js  products.js
app/ui/pages/: _common_layout.py  home.py  just_anoter_page.py  login.py  logout.py  page_3.py
app/ui/pages/home/: __init__.py  _page.py  products.py  selection_cards.py
mysite/: settings.py
