[tool.poetry]
name = "prodselect"
version = "0.1.0"
description = ""
authors = ["Fran Hrženjak <fran.hrzenjak@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = ">=4.2,<5.1"
dj-database-url = "^2.1.0"
psycopg = {version = ">=3.1,<3.2", extras = ["binary"]}
gunicorn = ">=21.2"
django-storages = ">=1.14"
boto3 = ">=1.34"
dash = "^2.16.1"
faker = "^24.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
